[FIX] fixed all hover states on mobile, including card rotation, fixed some spelling mistakes, fixed background video not working on mobile, added longer animation delay

--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -21,12 +21,14 @@
     transform: rotateY(180deg);
   }
 
-  &:hover &__front {
-    transform: rotateY(-180deg);
-  }
+  @include can-hover {
+    &:hover &__front {
+      transform: rotateY(-180deg);
+    }
 
-  &:hover &__back {
-    transform: rotateY(0deg);
+    &:hover &__back {
+      transform: rotateY(0deg);
+    }
   }
 
   &__logo {
